--- a/demo/fadeVisible.html
+++ b/demo/fadeVisible.html
@@ -9,6 +9,7 @@
     <style type="text/css">
       label, input {display:block}
       div {overflow:hidden; min-height: 20px;}
+      dd {font-weight:bold}
     </style>
     <script src="../external/jquery-3.3.1.min.js"></script>
     <script src="../external/knockout-3.4.2.js"></script>
@@ -50,6 +51,6 @@
       }
       
       ko.applyBindings(new VM());
-    </script>
+    </script><a href="../" style="position: absolute; right: 10px; top: 10px;">&laquo; Back</a>
   </body>
 </html>
