--- a/demo/formatDate.html
+++ b/demo/formatDate.html
@@ -47,6 +47,6 @@
       setInterval(() => vm.now(Date.now()), 1000);
       
       ko.applyBindings(vm);
-    </script>
+    </script><a href="../" style="position: absolute; right: 10px; top: 10px;">&laquo; Back</a>
   </body>
 </html>
