--- a/demo/trimmable.html
+++ b/demo/trimmable.html
@@ -31,6 +31,6 @@
       ko.applyBindings({
           myText: ko.observable('       huhu   und so   ').extend({trimmable: true})
       });
-    </script>
+    </script><a href="../" style="position: absolute; right: 10px; top: 10px;">&laquo; Back</a>
   </body>
 </html>
