--- a/demo/asynTwin.html
+++ b/demo/asynTwin.html
@@ -66,6 +66,6 @@
       }
       
       ko.applyBindings(new VM());
-    </script>
+    </script><a href="../" style="position: absolute; right: 10px; top: 10px;">&laquo; Back</a>
   </body>
 </html>
