--- a/demo/formatNumber.html
+++ b/demo/formatNumber.html
@@ -53,6 +53,6 @@
       setInterval(() => vm.someNumber(Math.random() * 10000000), 500);
       
       ko.applyBindings(vm);
-    </script>
+    </script><a href="../" style="position: absolute; right: 10px; top: 10px;">&laquo; Back</a>
   </body>
 </html>
