--- a/demo/importBindings.html
+++ b/demo/importBindings.html
@@ -16,7 +16,7 @@
     <script src="../external/moment.js"></script>
   </head>
   <body>
-    <input type="hidden" value="prefilled hidden text 1530195638319" data-bind="importValueTo: textFromHidden">
+    <input type="hidden" value="prefilled hidden text 1530206358480" data-bind="importValueTo: textFromHidden">
     <p>
       Demonstrates the `importValueTo` binding, useful when certain form values are rendered server-side
       and somehow need to be incorporated into the KO viewmodel
@@ -32,7 +32,7 @@
       <tbody>
         <tr>
           <td>myText (imported via `importValueTo` binding):
-            <input type="text" value="huhu 1530195638319" data-bind="importValueTo: myText, textInput: myText">
+            <input type="text" value="huhu 1530206358480" data-bind="importValueTo: myText, textInput: myText">
           </td>
           <td><b data-bind="text: myText"></b></td>
         </tr>
@@ -71,6 +71,6 @@
       }
       
       ko.applyBindings(vm);
-    </script>
+    </script><a href="../" style="position: absolute; right: 10px; top: 10px;">&laquo; Back</a>
   </body>
 </html>
